# communica

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  noxfile.py  pyproject.toml  pytest.ini  upload.bat
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
communica/: __init__.py  clients.py  exceptions.py  servers.py  utils.py
communica/connectors/: __init__.py  _stream_local.py  base.py  rabbitmq.py  stream.py
communica/connectors/rabbitmq/: __init__.py  connector.py  pool.py
communica/connectors/stream/: __init__.py  connector.py  local_connections.py
communica/entities/: __init__.py  base.py  route.py  simple.py
communica/pairs/: __init__.py  base.py  route.py  simple.py
communica/serializers/: __init__.py  adaptix.py  base.py  json.py  msgpack.py
communica/utils/: __init__.py  delayer.py  unsorted.py
docs/: conf.py  index.rst
examples/: route_client.py  route_server.py  simple_client.py  simple_server.py
experiments/: test_large_message.py
tests/: conftest.py  disconnect.py  simple_entities_for_tests.py  test_connectors.py  test_entities.py  test_rmq_conn_check_policy.py  test_serializers.py  test_utils.py  utils.py  utils_misc.py  utils_simple_entities_for_tests.py
