[project]
name = "communica"
version = "0.3.0a2"
authors = [
  { name="Elchin Sarkarov", email="elchin751@gmail.com" },
]
description = "Easy to use IPC library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
]
dependencies = ["typing-extensions"]

[project.optional-dependencies]
test = [ "pytest", "pytest-cov", "pytest-asyncio" ]
docs = [ "sphinx", "myst-parser", "python-docs-theme", "sphinx-autodoc2" ]

orjson = ["orjson"]
adaptix = ["adaptix"]
rabbitmq = ["aiormq", "yarl"]

[project.urls]
"Homepage" = "https://github.com/elchinchel/communica-py"
"Bug Tracker" = "https://github.com/elchinchel/communica-py/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["communica*"]
namespaces=false

[tool.pyright]
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = "warning"
reportUnnecessaryTypeIgnoreComments = "warning"
exclude = ["./build/"]

[tool.ruff]
line-length = 85

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
known-third-party = []

[tool.ruff.format]
quote-style = "single"