[project]
name = "communica"
version = "0.4.2a1"
authors = [
  { name="Elchin Sarkarov", email="elchin751@gmail.com" },
]
license="Apache-2.0"
description = "Easy to use IPC library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
]
dependencies = ["typing-extensions"]

[project.optional-dependencies]
orjson = ["orjson"]
adaptix = ["adaptix"]
msgpack = ["msgpack"]
rabbitmq = ["aiormq", "yarl"]

[project.urls]
"Homepage" = "https://github.com/Elchinchel/communica"
"Bug Tracker" = "https://github.com/Elchinchel/communica/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["communica*"]
namespaces=false

[tool.pyright]
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = "warning"
reportUnnecessaryTypeIgnoreComments = "warning"
exclude = ["./build/", "./.venv/", "./.nox/", "**/stdlib"]

[tool.ruff]
line-length = 85

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
known-third-party = []

[tool.ruff.format]
quote-style = "single"